--- a/cv.html
+++ b/cv.html
@@ -19,7 +19,7 @@
         <h1>Curriculum Vitae</h1>
         <table border="3">
             <tr>
-                <td><center><img src="pp.jpg" width="110" height="150"></center>
+                <td><center><img src="https://github.com/qaisyadwiaryana/Pemweb/blob/main/pp.jpg" width="110" height="150"></center>
                 </td>
                 <td class="bg1">
                 <h2 id="bg2"> Qaisya Dwi Aryana</h2>
