--- a/TugasPemWeb.html
+++ b/TugasPemWeb.html
@@ -135,7 +135,7 @@
                 <h1>I'M Qaisya</h1>
                 <p>I am a student at the Institut Teknologi Sumatera</p>
                 <p>I'm interested in web design</p>
-                <img src="foto5.png">
+                <img src="https://github.com/qaisyadwiaryana/Pemweb/blob/main/pp.jpg">
             </div>
         </div>
         
@@ -152,7 +152,7 @@
                                 <p>If you want to know more about me</p>
                                 <p>You can see in CV</p>
                                 <nav>
-                                    <a href="cv.html">My CV</a>
+                                    <a href="https://github.com/qaisyadwiaryana/Pemweb/blob/main/cv.html">My CV</a>
                                 </nav>
                                 </div>
                             </div>
